--- a/ch2/src/main/webapp/WEB-INF/web.xml
+++ b/ch2/src/main/webapp/WEB-INF/web.xml
@@ -53,4 +53,19 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<!-- 한글 변환 필터 끝 -->
+	
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
+	
+	<!-- 상태코드별로 여러개 생성 가능 -->
+	<error-page>
+		<error-code>400</error-code>
+		<location>/error400.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error500.jsp</location>
+	</error-page>
+	
 </web-app>
